<resources>
    <string name="app_name">Book Store App</string>
    <string name="add_a_book">Add a Book</string>
    <string name="book_store">The book store\'s inventory contains:</string>
    <string name="book_name">Book Name</string>
    <string name="book_title">Book Title</string>
    <string name="book_price">Book Price</string>
    <string name="quantity">Quantity</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_phone">Supplier Phone</string>
    <string name="done">Done</string>
    <string name="no_books">There is no "\"Books\" for now.\n Start adding some Books</string>
    <string name="book_details">Book\'s Details</string>
    <string name="failed">Insert Failed</string>
    <string name="sale">Sale</string>
    <string name="edit">Edit</string>
    <string name="edit_a_book">Edit a book</string>
    <string name="delete_book">Delete the book</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="_0">0</string>
    <string name="home">Home</string>
    <string name="delete_all">Delete all books</string>
    <string name="faild_to_delete">Failed to delete all books</string>
    <string name="all_books_deleted">You deleted all books</string>
    <string name="failed_to_delete_one_book">Failed to delete this book</string>
    <string name="one_book_deleted">You deleted this book</string>
    <string name="no_0s_value">You can\'t have less than 0 for the quantity</string>
    <string name="complete">Complete the book info</string>
    <string name="failed_insert">Inserting failed</string>
    <string name="successful_inserting">Inserting successful</string>
    <string name="update_failed">Update failed</string>
    <string name="udate_successful">Update successful</string>
    <string name="no_decreased">No decreased quantity</string>
    <string name="decreased">You decreased the quantity</string>
    <string name="not_increased">Not increased the quantity</string>
    <string name="increased">You increased the quantity</string>
    <string name="no_details">There isn\'t any book details</string>
    <string name="order">order</string>
    <string name="increase">+</string>
    <string name="decrease">-</string>
    <string name="book_title_">Book title :</string>
    <string name="book_quantity">Book quantity :</string>
    <string name="book_price_">Book price : $</string>
    <string name="supplier_name_">Supplier Name :</string>
    <string name="supplier_phone_">Supplier Phone :</string>
</resources>
