<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.tito.bookstoreapp.EditorActivity">

    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <TextView
                android:text="@string/book_title"
                android:textSize="@dimen/size_15_sp"
                android:textColor="#000"
                android:layout_marginTop="@dimen/size_30"
                android:layout_marginLeft="@dimen/size_20"
                android:layout_marginBottom="@dimen/size_15"
                android:layout_alignParentLeft="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <EditText
                android:hint="@string/book_title"
                android:id="@+id/book_title"
                android:inputType="textCapWords"
                android:layout_marginTop="@dimen/size_15"
                android:layout_marginBottom="@dimen/size_15"
                android:layout_marginRight="@dimen/size_20"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </RelativeLayout>

    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <TextView
                android:text="@string/book_price"
                android:textSize="@dimen/size_15_sp"
                android:textColor="#000"
                android:layout_marginTop="@dimen/size_30"
                android:layout_marginLeft="@dimen/size_20"
                android:layout_alignParentLeft="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <EditText
                android:hint="@string/book_price"
                android:id="@+id/book_price"
                android:inputType="numberDecimal"
                android:layout_marginTop="@dimen/size_15"
                android:layout_marginBottom="@dimen/size_15"
                android:layout_marginRight="@dimen/size_20"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </RelativeLayout>

    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <TextView
                android:text="@string/quantity"
                android:textSize="@dimen/size_15_sp"
                android:textColor="#000"
                android:layout_marginTop="@dimen/size_30"
                android:layout_marginLeft="@dimen/size_20"
                android:layout_alignParentLeft="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView"/>

        <Button android:id="@+id/increase"
                android:text="+"
                android:textSize="@dimen/size_15_sp"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView"
                android:layout_alignBottom="@+id/textView"
                android:layout_toRightOf="@+id/textView"
                android:layout_toEndOf="@+id/textView"
                android:layout_marginLeft="59dp"
                android:layout_marginStart="59dp"/>

        <EditText
                android:hint="@string/quantity"
                android:id="@+id/quantity"
                android:inputType="number"
                android:layout_marginTop="@dimen/size_15"
                android:layout_marginBottom="@dimen/size_15"
                android:layout_width="@dimen/size_30"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/increase"
        />

        <Button android:id="@+id/decrease"
                android:text="-"
                android:textSize="@dimen/size_15_sp"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/quantity"
                android:layout_alignBottom="@+id/quantity"
                android:layout_toRightOf="@id/quantity"
                android:layout_marginLeft="@dimen/size_15"
                android:layout_marginRight="@dimen/size_15"/>

    </RelativeLayout>

    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <TextView
                android:text="@string/supplier_name"
                android:textSize="@dimen/size_15_sp"
                android:textColor="#000"
                android:layout_marginTop="@dimen/size_30"
                android:layout_marginLeft="@dimen/size_20"
                android:layout_alignParentLeft="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <EditText
                android:id="@+id/supplier_name"
                android:inputType="textCapWords"
                android:hint="@string/supplier_name"
                android:layout_marginTop="@dimen/size_15"
                android:layout_marginBottom="@dimen/size_15"
                android:layout_marginRight="@dimen/size_20"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </RelativeLayout>

    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <TextView
                android:text="@string/supplier_phone"
                android:textSize="@dimen/size_15_sp"
                android:textColor="#000"
                android:layout_marginTop="@dimen/size_30"
                android:layout_marginLeft="@dimen/size_20"
                android:layout_alignParentLeft="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <EditText
                android:hint="@string/supplier_phone"
                android:id="@+id/supplier_phone"
                android:inputType="phone"
                android:layout_marginTop="@dimen/size_15"
                android:layout_marginBottom="@dimen/size_15"
                android:layout_marginRight="@dimen/size_20"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </RelativeLayout>

</LinearLayout>
